--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="icon" href="B89E687D-F6B9-4B....png">
 <link rel="apple-touch-icon" href="B89E687D-F6B9-4B....png">
+<link rel="apple-touch-icon" sizes="512x512" href="B89E687D-F6B9-4B....png">
 <meta charset="UTF-8">
 <title>習慣チェッカー</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
